src/recipe_generator/snapshots/rattler_build__recipe_generator__pypi__tests__flask_noarch_recipe_generation.snap
---
source: src/recipe_generator/pypi.rs
expression: recipe
---
context:
  version: 3.1.0
package:
  name: flask
  version: "${{ version }}"
source:
  - url: "https://pypi.org/packages/source/f/flask/flask-${{ version }}.tar.gz"
    sha256: 5f873c5184c897c8d9d1b05df1e3d01b14910ce69607a117bd3277098a5836ac
build:
  script: "${{ PYTHON }} -m pip install --no-deps ."
  python:
    entry_points:
      - "flask = flask.cli:main"
  noarch: python
requirements:
  host:
    - python >=3.9
    - flit_core<4
    - pip
  run:
    - python >=3.9
    - werkzeug >=3.1
    - jinja2 >=3.1.2
    - itsdangerous >=2.2
    - click >=8.1.3
    - blinker >=1.9
    - "importlib-metadata >=3.6 ;MARKER; python_version < \"3.10\""
    - "asgiref >=3.2 ;MARKER; extra == \"async\""
    - "python-dotenv  ;MARKER; extra == \"dotenv\""
tests:
  - python:
      imports:
        - Flask
      pip_check: true
about:
  summary: A simple framework for building complex web applications.
  description: "# Flask\n\nFlask is a lightweight [WSGI][] web application framework. It is designed\nto make getting started quick and easy, with the ability to scale up to\ncomplex applications. It began as a simple wrapper around [Werkzeug][]\nand [Jinja][], and has become one of the most popular Python web\napplication frameworks.\n\nFlask offers suggestions, but doesn't enforce any dependencies or\nproject layout. It is up to the developer to choose the tools and\nlibraries they want to use. There are many extensions provided by the\ncommunity that make adding new functionality easy.\n\n[WSGI]: https://wsgi.readthedocs.io/\n[Werkzeug]: https://werkzeug.palletsprojects.com/\n[Jinja]: https://jinja.palletsprojects.com/\n\n\n## A Simple Example\n\n```python\n# save this as app.py\nfrom flask import Flask\n\napp = Flask(__name__)\n\n@app.route(\"/\")\ndef hello():\n    return \"Hello, World!\"\n```\n\n```\n$ flask run\n  * Running on http://127.0.0.1:5000/ (Press CTRL+C to quit)\n```\n\n\n## Donate\n\nThe Pallets organization develops and supports Flask and the libraries\nit uses. In order to grow the community of contributors and users, and\nallow the maintainers to devote more time to the projects, [please\ndonate today][].\n\n[please donate today]: https://palletsprojects.com/donate\n\n"
  documentation: "https://flask.palletsprojects.com/"
